objects/Parametros_ROI__c.object
<CustomObject>
    <fields>
        <fullName>Classificacao_Contrapartida__c</fullName>
        <label>Classificação Contrapartida</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sem Visibilidade de Marca</fullName>
                </value>
                <value>
                    <fullName>Baixa Visibilidade de Marca</fullName>
                </value>
                <value>
                    <fullName>Media Visibilidade de Marca</fullName>
                </value>
                <value>
                    <fullName>Alta Visibilidade de Marca</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Classificacao_Margem__c</fullName>
        <label>Classificação Margem</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classificacao_Potencial__c</fullName>
        <label>Classificação Potencial</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Classificacao_ROI__c</fullName>
        <label>Classificação ROI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contrapartida_de_Visibilidade__c</fullName>
        <label>Contrapartida de Visibilidade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Visibilidade do produto</fullName>
                </value>
                <value>
                    <fullName>Tailor Made</fullName>
                </value>
                <value>
                    <fullName>Uniforme</fullName>
                </value>
                <value>
                    <fullName>Material</fullName>
                </value>
                <value>
                    <fullName>Venda de Garrafa</fullName>
                </value>
                <value>
                    <fullName>Incentivo da Brigada</fullName>
                </value>
                <value>
                    <fullName>Comunicação</fullName>
                </value>
                <value>
                    <fullName>Festas Eventos</fullName>
                </value>
                <value>
                    <fullName>Cardápio</fullName>
                </value>
                <value>
                    <fullName>Consultoria de Mixologistas</fullName>
                </value>
                <value>
                    <fullName>Projetos Especiais</fullName>
                </value>
                <value>
                    <fullName>Ativação</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KPI_GD__c</fullName>
        <label>Pontos Gráfico Decisão</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KPI_GS__c</fullName>
        <label>Pontos Gráfico Spider</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Litros_ATE__c</fullName>
        <label>Litros ATÉ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Litros_DE__c</fullName>
        <label>Litros DE</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perc_Classificacao_ATE__c</fullName>
        <label>% Classificação ATÉ</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Perc_Classificacao_DE__c</fullName>
        <label>% Classificação DE</label>
        <precision>6</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pontuacao_ATE__c</fullName>
        <label>Pontuação ATÉ</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pontuacao_DE__c</fullName>
        <label>Pontuação DE</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pontuacao__c</fullName>
        <label>Pontuação</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tipo_Negocio__c</fullName>
        <label>Tipo Negócio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bar</fullName>
                </value>
                <value>
                    <fullName>Bar Agitado</fullName>
                </value>
                <value>
                    <fullName>Restaurante</fullName>
                </value>
                <value>
                    <fullName>Casa Noturna</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Parâmetros ROI</label>
    <nameField>
        <displayFormat>PRMT-ROI-{000000000}</displayFormat>
        <label>Nome da Parâmetros ROI</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parâmetros ROI</pluralLabel>
    <recordTypes>
        <fullName>Classificacao_ROI_e_Margem</fullName>
        <active>true</active>
        <description>Classificação ROI e Margem</description>
        <label>Classificação ROI e Margem</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contrapartida_Visibilidade_Classificacao</fullName>
        <active>true</active>
        <description>Contrapartida Visibilidade - Classificação</description>
        <label>Contrapartida Visibilidade - Classificação</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contrapartida_Visibilidade_Pontuacao</fullName>
        <active>true</active>
        <description>Contrapartida Visibilidade - Pontuação</description>
        <label>Contrapartida Visibilidade - Pontuação</label>
    </recordTypes>
    <recordTypes>
        <fullName>Padrao</fullName>
        <active>true</active>
        <label>Padrão</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pontencial_de_Volume_Litros</fullName>
        <active>true</active>
        <description>Pontencial de Volume (Litros)</description>
        <label>Pontencial de Volume (Litros)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>